# projectLP25

./: CMakeLists.txt  Makefile  README.md  configuration.c  configuration.h  file-properties.c  files-list.c  messages.c  messages.h  processes.c  sync.c  utility.c
